changed: fixed miss align urlbar firefox 126.0b1 nightly

--- a/.mozilla/firefox/chrome/userChrome.css
+++ b/.mozilla/firefox/chrome/userChrome.css
@@ -12,8 +12,13 @@
 	#main-window body { flex-direction: column-reverse !important; }
 	#navigator-toolbox { flex-direction: column-reverse !important; }
 	#urlbar {
+
+        /* fixed miss align urlbarview result firefox 126.0b1(64bit) nightly */
+        --urlbar-height: 28px !important;
+        --urlbar-toolbar-height: 30px !important;
+
 		top: unset !important;
-		bottom: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
+		bottom: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important; 
 		box-shadow: none !important;
 		display: flex !important;
 		flex-direction: column !important;
